--- a/projet_css/login.css
+++ b/projet_css/login.css
@@ -3,31 +3,28 @@ body{
     background-size: cover; 
 }
 
+header{
+    text-align: center;
+}
+
 div.form{
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    height: min-content;
     opacity: 1;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
 
-div.form:not(form){
-    opacity: 0.5;
-}
-
-p{
-    padding: 100px;
-    background-color: aqua;
-}
 
 form{
     color:white;
-    background-color: #188614;
-    padding: 10px;
+    /*background-color: #188614;*/
+    background: rgb(64, 137 , 6, 0.8);
     padding: 20px 40px 20px 40px;
+    border-radius: 10px;
     text-align: center;
 }
 
@@ -43,3 +40,22 @@ form a{
     color:white;
     text-decoration: none;
  }
+
+ footer{
+    text-align: right;
+    margin-right:10px;
+ }
+ 
+ a:link{
+    text-decoration: underline;
+    color:white;
+ }
+
+ a:visited{
+    text-decoration: underline;
+    color:white;
+ }
+a:hover{
+    text-decoration: underline;
+    color:#408906;
+}
