--- a/projet_css/login.css
+++ b/projet_css/login.css
@@ -1,61 +1,98 @@
 body{
     background: url(./login.png) no-repeat;
     background-size: cover; 
+    font-size: medium;
 }
 
-header{
-    text-align: center;
+page{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    flex-flow: row wrap;
 }
 
-div.form{
+div.logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
+}
+
+break{
+    flex-basis: 100%;
+    width: 0%;
+    height: 0%;
+}
+img{
+    max-width: 28%;
+    height: max-content;
+}
+
+div.formulaire{
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: min-content;
-    opacity: 1;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
+    height: auto;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;    font-size: large;
+}
+
+a.sign-up{
+    text-align: right;
+    float: right;
+    text-decoration: none;
+    color: white;
+}
+a.sign-up:hover{
+    text-decoration: underline;
+}
+
+.sign-in{
+    background-color: green;
+    color: white;
+    padding: 1%;
+    border-radius: 7%;
+    font-size: large;
+    line-height: 80%;
+}
+.sign-in:hover{
+    background-color:blue;
 }
 
 
 form{
     color:white;
-    /*background-color: #188614;*/
     background: rgb(64, 137 , 6, 0.8);
-    padding: 20px 40px 20px 40px;
-    border-radius: 10px;
-    text-align: center;
+    padding: 1.2%;
+    border-radius: 5%;
 }
 
 input[type=password], [type=text]{
     border: none;
-    padding: 10px;
+    padding: 9px;
     background: white;
-    width: auto;
     margin: 10px 0px 20px 0px  ;
 }
 
-form a{
+
+/*Background credit*/
+footer{
+    display: flex;
+    width: 100%;
+    margin-right:0.5%;
+    justify-content: right;
+    align-items: flex-end;
+}
+a.credit{
     color:white;
     text-decoration: none;
- }
-
- footer{
-    text-align: right;
-    margin-right:10px;
- }
- 
- a:link{
+}
+a.credit:visited{
     text-decoration: underline;
     color:white;
- }
-
- a:visited{
-    text-decoration: underline;
-    color:white;
- }
-a:hover{
+}
+a.credit:hover{
     text-decoration: underline;
     color:#408906;
 }
