--- a/projet_css/homepage.css
+++ b/projet_css/homepage.css
@@ -3,11 +3,23 @@
     width: 800px;
 }
 
-header:not(button){
-    text-align: center;
+header{
+    background-color: #C0C0C0;
+    border-radius: 6px;
+    padding: 1%;
 }
 
+.deco{
+    margin-left: auto;
+    position: fixed;
+    left: 95.5%;
+}
+
+nav{
+    text-align: center;
+}
 img.logo{
+    position: fixed;
     max-width: 16%;
     height: auto;
 }
