--- a/projet_css/login.css
+++ b/projet_css/login.css
@@ -33,10 +33,17 @@ div.formulaire{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;    font-size: large;
 }
 
+.error_connection {
+    position: absolute;
+    top: 45%;
+    color: red;
+    font-size: 15px;
+}
+
 form{
     color:white;
     background: rgb(64, 137 , 6, 0.8);
-    padding: 1%;
+    padding: 2%;
     border-radius: 5%;
 }
 
