--- a/projet_css/homepage.css
+++ b/projet_css/homepage.css
@@ -3,24 +3,22 @@
     width: 800px;
 }
 
-header{
+header:not(.deco){
     background-color: rgb(64, 137 , 6);
     border-radius: 6px;
     padding: 1%;
     display: flex;
-}
-
-.deco{
-    margin-left: auto;
+    align-items: center;
 }
 
 img.logo{
     max-width: 16%;
     height: max-content;
 }
+
 nav{
-    margin-left: 100vh;
     text-align: center;
+    margin-left: 25%;
 }
 
 .h{
@@ -46,11 +44,14 @@ nav li:hover{
 
 .deco{
     text-align: right;
+    margin-left: auto;
+
 }
 
 
 main{
     display: flex;
+
 }
 
 .side{
@@ -66,4 +67,12 @@ main{
 div.side a p{
     color: white;
     text-decoration: none;
+}
+
+.se{
+    margin-left: 1%;
+}
+
+.follow{
+    margin-left: 7%;
 }
