--- a/projet_css/my_runs.css
+++ b/projet_css/my_runs.css
@@ -1,3 +1,7 @@
+html{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;    font-size: large;
+}
+
 *[id^="map"]{
     height:250px;
     width: 700px;
